@@ -60,6 +60,8 @@ exportMethods(
               "RepoMetaData",
 
               # TermDocMatrix
+              "Data",
+              "Data<-",
               "Weighting",
               "Weighting<-",
 
