@@ -5,7 +5,7 @@
 
 # Input matrix has to be in term-frequency format
 weightMatrix <- function(m, weighting = "tf") {
-    type <- match.arg(weighting, c("tf","tf-idf","bin","logical"))
+    type <- match.arg(weighting, c("tf", "tf-idf", "bin", "logical"))
     switch(type,
            "tf" = {
                wm <- m
@@ -34,7 +34,7 @@ setMethod("TermDocMatrix",
               class(tm) <- "matrix"
               tm <- weightMatrix(tm, weighting)
 
-              new("TermDocMatrix", .Data = tm, Weighting = weighting)
+              new("TermDocMatrix", Data = Matrix(tm), Weighting = weighting)
           })
 
 textvector <- function(doc, stemming = FALSE, minWordLength = 3, minDocFreq = 1, stopwords = NULL) {
@@ -82,18 +82,18 @@ setGeneric("findFreqTerms", function(object, lowfreq, highfreq) standardGeneric(
 setMethod("findFreqTerms",
           signature(object = "TermDocMatrix", lowfreq = "numeric", highfreq = "numeric"),
           function(object, lowfreq, highfreq) {
-              unique(rownames(which(t(object) >= lowfreq & t(object) <= highfreq, arr.ind = TRUE)))
+              unique(rownames(which(t(Data(object)) >= lowfreq & t(Data(object)) <= highfreq, arr.ind = TRUE)))
           })
 
 setGeneric("findAssocs", function(object, term, corlimit) standardGeneric("findAssocs"))
 setMethod("findAssocs",
           signature(object = "TermDocMatrix", term = "character"),
           function(object, term, corlimit) {
-              suppressWarnings(object.cor <- cor(object))
+              suppressWarnings(object.cor <- cor(Data(object)))
               sort(round(object.cor[term, which(object.cor[term,] > corlimit)], 2), decreasing = TRUE)
           })
 setMethod("findAssocs",
-          signature(object = "matrix", term = "character"),
+          signature(object = "Matrix", term = "character"),
           function(object, term, corlimit) {
               sort(round(object[term, which(object[term,] > corlimit)], 2), decreasing = TRUE)
           })
