@@ -1,5 +1,7 @@
 2007-03-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* R/termdocmatrix.R (TermDocMatrix): Uses sparse matrices.
+
 	* R/resolve.R (resolveISOcode): Extracts the language from a ISO
 	language code.
 
